--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ div.grid {
 
 }
 
+canvas.board {
+    border: 3px solid black;
+    height: 100%;
+    width: 100%;
+}
+
 div.row {
     display: flex;
     justify-content: space-around;
