--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
-div.grid {
-
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
 canvas.board {
-    border: 3px solid black;
     image-rendering: pixelated;
-    height: 100%;
+    position: absolute;
+    top: 0; right: 10px; bottom: 10px; left: 0;
     width: 100%;
+    display: flex;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.17);
+    border: 1px solid rgba(0,0,0,0.17);
+}
+
+div.container {
+    padding-bottom: 100%;
+    position: relative;
+}
+
+div.header {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+div.header button {
+    width: 100px;
+}
+
+div.header p {
+    margin-left: 10px;
 }
