--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-button:focus {outline:0;}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
